--- a/Labo_TIS-100_6/elech473_tis-100_6.tex
+++ b/Labo_TIS-100_6/elech473_tis-100_6.tex
@@ -38,7 +38,7 @@
 \usepackage{rotating}
 \usepackage{fontawesome} %Symbols
 
-\newcommand{\version}{v1.0.0}
+\newcommand{\version}{v1.0.1}
 
 %cyr
 %\newcommand\textcyr[1]{{\fontencoding{OT2}\fontfamily{wncyr}\selectfont #1}}
@@ -47,14 +47,6 @@
 \newboolean{corrige}
 %\setboolean{corrige}{true}%corrigé
 \setboolean{corrige}{false}% pas de corrigé
-
-\newboolean{annexes}
-%\setboolean{annexes}{true}%annexes
-\setboolean{annexes}{false}% pas de annexes
-
-\newboolean{mos}
-%\setboolean{mos}{true}%annexes
-\setboolean{mos}{false}% pas de annexes
 
 \usepackage{aeguill} %guillemets
 
@@ -67,14 +59,14 @@
 %%
 
 \pdfinfo{
-/Author (La saucisse volante)
+/Author (La saucisse électronique volante)
 /Title (ELECH473 Lab 6 - TIS-100)
 /ModDate (D:\pdfdate)
 }
 
 \hypersetup{
 pdftitle={ELECH473 Lab 6 - TIS-100},
-pdfauthor={Mouette vengeresse},
+pdfauthor={Mouette unijambiste vengeresse},
 pdfsubject={TIS-100}
 }
 
@@ -88,8 +80,6 @@ pdfsubject={TIS-100}
 \newcommand{\addcontentslinenono}[4]{\addtocontents{#1}{\protect\contentsline{#2}{#3}{#4}{}}}
 
 \newcommand{\on}[1]{{\operatorname{#1}}}
-
-\newcommand{\reg}[1]{\texttt{reg#1}}
 
 \def\labelitemi{--}
 \setlist{parsep=0pt,itemsep=0pt,style=standard,leftmargin=\parindent, align=left} % pas d'espace prohibitif entre les items
@@ -146,15 +136,16 @@ What you will need:
 \begin{itemize}
 \item A copy of TIS-100
 	\begin{itemize}
-	\item DRM-free from the lab network drive.
-	\item DRM-free and Steam key from \href{https://www.humblebundle.com/store/tis100}{Humble Bundle}.
+	\item DRM-free from the lab network drive (Z:/).
 	\end{itemize}
 \item The TIS-100 reference manual
 \item RTFM
 \end{itemize}
+~\\
+If you like this lab and want to continue playing, consider supporting the developers by buying the game on Steam (DRM-free key available at \href{https://www.humblebundle.com/store/tis100}{Humble Bundle})
 
 \section{Tessellated Intelligence System: TIS-100}
-You are a system engineer charged with completing a set of task on an old computer: the TIS-100.
+You are a system engineer charged with completing a set of tasks on an old computer: the TIS-100.
 Its architecture is composed of twelve interconnected nodes that can exchange data with their direct neighbours.
 Each node can be one out of the three possible types: 
 \begin{itemize}
@@ -169,10 +160,10 @@ Each node can be one out of the three possible types:
 \end{center}
 
 The node is composed of a 15-lines programmable area surrounded by its register and various information.
-It has two registers: \texttt{ACC} and \texttt{BAK}, the former being directly addressable whilst the later is not and can only be modified using the \texttt{SAV} and \texttt{SWP} commands.
+It has two registers: \texttt{ACC} and \texttt{BAK}, the former being directly addressable whereas the later and can only be modified using the \texttt{SAV} and \texttt{SWP} commands.
 The \texttt{LAST} register tells you which port has been used last, \texttt{MODE} what the node is doing and \texttt{IDLE} the percentage of time the node has spent doing nothing.
 
-Using the \texttt{MOV} instruction, it can communication with the surrounding computing or memory stack nodes.
+Using the \texttt{MOV} instruction, it can communicate with the surrounding computing or memory stack nodes.
 
 
 
@@ -217,19 +208,20 @@ For this lab, you will need to import three levels:
 \end{itemize}
 
 
+\section{Your mission}
 
+\subsection{Basics}
 
-\section{Assignment}
+We strongly advise you to first train on the pre-existing levels of the game before tackling the custom specifications (see Assignment).
+You should get the hang of it by the end of the fourth level: ``Signal comparator".
+
+\subsection{Assignment}
 We ask you to solve two custom levels: ``Decode the image" and ``Coprime detector".
 The grade will be based on the performance of all the submissions and weighted across the three measures: node, instruction and cycle count.
 If you performed better than all the other groups for at least one of the three performance measures, you will get a perfect grade for the exercise, that is two out of two.
 Otherwise, you will be awarded one point if the problem is solved and the second point will be weighted against all submissions (e.g. if you performed the worst in all three measures, you won't get any point, if you are right at the average, you will get half a point).
 
 We will not disclose the performance of the submissions before the last group has sent us his submission, as you are not all synchronized.
-~\\
-
-We strongly advise you to first train on the pre-existing levels of the game before tackling the custom specifications.
-You should get the hang of it by the end of the fourth level: ``Signal comparator".
 ~\\
 
 \textbf{You will need to send us two \text{.txt} files, one for each solution.}
