--- a/Labo_TIS-100_6/elech473_tis-100_6.tex
+++ b/Labo_TIS-100_6/elech473_tis-100_6.tex
@@ -134,10 +134,7 @@ Using an exclusive architecture, we want to show you:
 
 What you will need:
 \begin{itemize}
-\item A copy of TIS-100
-	\begin{itemize}
-	\item DRM-free from the lab network drive (Z:/).
-	\end{itemize}
+\item A copy of TIS-100 (DRM-free from the lab network drive (Z:/))
 \item The TIS-100 reference manual
 \item RTFM
 \end{itemize}
