[presentation] Update Ken & deadline clarification

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -215,7 +215,7 @@ KR580VM80A die shot, CC by http://zeptobars.ru
 \item[]
 \item Form groups of 4 students and \textbf{enroll in a group on the UV}.
 \item[]
-\item Assignments have to be submitted on the UV.\\ You have one week to meet the deadline.
+\item Assignments have to be submitted on the UV.\\ The deadline is one week after the related lab.
 \item[]
 \item No group, no submission possible.\\Beyond the deadline, no submission possible.
 \item[]
