[presentation] Actually *four* architectures.

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -196,11 +196,12 @@ KR580VM80A die shot, CC by http://zeptobars.ru
 \begin{frame}
 \frametitle{The labs}
 
-3 microprocessor architectures:
+Four microprocessor architectures:
 \begin{itemize}
 \item RiSC16: Very small RISC, 4 labs
 \item[]
 \item dsPIC33: Microcontroller, also RISC, 1 lab
+\item[]
 \item TIS-100, 1 lab
 \item[]
 \item x86\_64: Standard computer microprocessor (CISC), 3 labs
