[RISC 1] Send assignements through uv, v1.1.0

--- a/Labo_RISC_1/elech473_risc_labo1.tex
+++ b/Labo_RISC_1/elech473_risc_labo1.tex
@@ -41,7 +41,7 @@
 \usepackage{booktabs}
 \usepackage{rotating}
 
-\newcommand{\version}{v1.0.1}
+\newcommand{\version}{v1.1.0}
 
 %cyr
 %\newcommand\textcyr[1]{{\fontencoding{OT2}\fontfamily{wncyr}\selectfont #1}}
@@ -1101,7 +1101,7 @@ The verification tool has still some bugs\footnote{Any bug report will be apprec
 \end{enumerate}
 
 \section{Assignment}
-{\color{red}Send by email to your assistant codes for 32b addition (Question~\ref{Q:32b}) and multiplication (Question\ref{Q:9}).}
+{\color{red}Send through the \href{https://uv.ulb.ac.be/}{UV} your codes for 32b addition (Question~\ref{Q:32b}) and multiplication (Question\ref{Q:9}).}
 %You can do it 10 times before the lab, 4 times during the lab and 3 times before the deadline. Don't expect to get the test report in less than a day if you send it before/after the lab.
 
 
