[RISC 1] update online sim url

--- a/Labo_RISC_1/elech473_risc_labo1.tex
+++ b/Labo_RISC_1/elech473_risc_labo1.tex
@@ -41,7 +41,7 @@
 \usepackage{booktabs}
 \usepackage{rotating}
 
-\newcommand{\version}{v1.1.0}
+\newcommand{\version}{v1.1.1}
 
 %cyr
 %\newcommand\textcyr[1]{{\fontencoding{OT2}\fontfamily{wncyr}\selectfont #1}}
@@ -77,7 +77,7 @@
 
 \hypersetup{
 pdftitle={Lab 1 [ELEC-H-473] Microprocessor Architectures},
-pdfauthor={Yannick Allard, ©2013-2016 ULB - BEAMS  },
+pdfauthor={Yannick Allard, 2013-2021 ULB - BEAMS  },
 pdfsubject={RiSC16 1-2/4}
 }
 
@@ -94,7 +94,7 @@ pdfsubject={RiSC16 1-2/4}
 
 \newcommand{\reg}[1]{\texttt{reg#1}}
 
-\newcommand{\ovt}{\href{http://164.15.75.7:80}{Online Verification Tool®©™}}
+\newcommand{\ovt}{\href{https://risc16.weegee.fr}{Online Verification Tool}}
 
 \def\labelitemi{--}
 %%\setlist{nosep} % pas d'espace prohibitif entre les items
@@ -769,10 +769,7 @@ Using the graph in annexe \vref{an:graph}, draw the chronogram for the \verb!BEQ
 
 
 %For the following exercises, an online verification tool is available to run automated tests on your code. 
-For each of the exercises \ref{Q:4}--\ref{Q:9}, you can automagically test your code against a set of \textit{test vectors} (listed in section \ref{sec:vectors}) using the ``\textbf{\ovt}'' at address: 
-\begin{center}
-	\href{http://164.15.75.7:80}{http://164.15.75.7:80}
-\end{center}
+For each of the exercises \ref{Q:4}--\ref{Q:9}, you can automatically test your code against a set of \textit{test vectors} (listed in section \ref{sec:vectors}) using the ``\textbf{\ovt}''.
 Read this handout to the end to get a glimpse on its capabilities and to understand how to use it.
 \begin{Q}
 	%Q
