update presentation, food,drinks and lab percentage

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -14,22 +14,14 @@
 %\usepackage{hyperref}
 %\usetheme{Luebeck}
 %\usetheme{Warsaw}
-%\usetheme{Copenhagen}
 \usepackage{fontawesome}
-
-%\usetheme{Luebeck}%Madrid
 \usetheme{default}%Madrid
 \usecolortheme{whale}
 \usecolortheme{orchid}
-%\useinnertheme{default}%dirty hack to suppress the shadow on the background gradient
 \useoutertheme{infolines}
-
-
 
 \usepackage{pgfpages}
 %\pgfpagesuselayout{4 on 1}[a4paper,landscape,border shrink=5mm,border code=\pgfstroke]
-
-
 
 \makeindex
 
@@ -39,9 +31,8 @@ $\sim$ \\
 Short introduction to the labs
 }
 \institute[\begin{tiny}ULB--BEAMS\end{tiny}]{%ULB--BEAMS%
-\includegraphics[height=1.1cm, origin=c]{figures/ulbquadri_mini.pdf} ~~ \includegraphics[height=1cm, origin=c]{figures/beamsWODept.pdf} ~~\raisebox{-2mm}{} %\includegraphics[height=0.75cm]{ee_Xlarge.png}
-% \\ $\therefore$ \\ \includegraphics[height=0.75cm]{inpn7logo.pdf}
- }%{BEAMS - ULB\\  ENSEEIHT}
+\includegraphics[height=1.1cm, origin=c]{figures/ulbquadri_mini.pdf} ~~ \includegraphics[height=1cm, origin=c]{figures/beamsWODept.pdf} ~~\raisebox{-2mm}{} 
+ }
 
 \date[]{}
 
@@ -90,9 +81,7 @@ Short introduction to the labs
 
 \begin{frame}[plain]
 	\titlepage
-
 \end{frame}
-
 
 
 \section{Introduction}
@@ -133,24 +122,26 @@ KR580VM80A die shot, CC by http://zeptobars.ru
 \end{frame}
 \setcounter{tocdepth}{3}
 
-\section{The UA5 lab}
-\begin{frame}
-\frametitle{The UA5 lab}
-%Voiture shadok
+% TODO: put this back if one day we can come back to UA5...
 
-\begin{block}<+->{If you are not (yet) familiar with this lab:}
+%\section{The UA5 lab}
+%\begin{frame}
+%\frametitle{The UA5 lab}
+%%Voiture shadok
 
-\begin{itemize}
-%\item Allumage des clignotants
-\item This is not a restaurant: no food
-\item This is not a bar: no drinks (except closed bottles)
-\item Keep quiet, people are thinking hard here
-%\item Attendance is mandatory
-\item Keep the room tidy
-%\item GPS
-\end{itemize}
-\end{block}
-\end{frame}
+%\begin{block}<+->{If you are not (yet) familiar with this lab:}
+
+%\begin{itemize}
+%%\item Allumage des clignotants
+%\item This is not a restaurant: no food
+%\item This is not a bar: no drinks (except closed bottles)
+%\item Keep quiet, people are thinking hard here
+%%\item Attendance is mandatory
+%\item Keep the room tidy
+%%\item GPS
+%\end{itemize}
+%\end{block}
+%\end{frame}
 
 \begin{frame}
 \frametitle{People involved}
@@ -220,9 +211,8 @@ Four microprocessor architectures:
 \item[]
 \item No group, no submission possible.\\Beyond the deadline, no submission possible.
 \item[]
-\item All assignments will be evaluated for 32.5\% of you final exam mark
+\item All assignments will be evaluated for 35\% of you final exam mark
 \end{itemize}
-
 
 
 \end{frame}
