--- a/Labo_TIS-100_6/elech473_tis-100_6.tex
+++ b/Labo_TIS-100_6/elech473_tis-100_6.tex
@@ -38,7 +38,7 @@
 \usepackage{rotating}
 \usepackage{fontawesome} %Symbols
 
-\newcommand{\version}{v1.0.3}
+\newcommand{\version}{v1.1.0}
 
 %cyr
 %\newcommand\textcyr[1]{{\fontencoding{OT2}\fontfamily{wncyr}\selectfont #1}}
@@ -214,12 +214,25 @@ We strongly advise you to first train on the pre-existing levels of the game bef
 You should get the hang of it by the end of the fourth level: ``Signal comparator".
 
 \subsection{Assignment}
-We ask you to solve two custom levels: ``Decode the image" and ``Coprime detector".
+We ask you to solve two custom levels: ``Decode the image" and ``Coprime detector", \textbf{not} ``Multiplication" which is only there as an optional non-graded bonus.
 The grade will be based on the performance of all the submissions and weighted across the three measures: node, instruction and cycle count.
-If you performed better than all the other groups for at least one of the three performance measures, you will get a perfect grade for the exercise, that is two out of two.
-Otherwise, you will be awarded one point if the problem is solved and the second point will be weighted against all submissions (e.g. if you performed the worst in all three measures, you won't get any point, if you are right at the average, you will get half a point).
+If you performed better than all the other groups for at least one of the three performance measures, you will get a perfect grade for the exercise, that is five out of five.
+Otherwise, you will be awarded two points if the problem is solved and each of the remaining three will be linearly weighted against all submissions for each metrics (e.g. if you performed the worst in all three measures, you won't get any more point, if you are right at the average, you will get half a point each, i.e. 3.5/5). Table~\ref{tab:scores} gives you the minimum and maximum submission scores for a given year.
 
-We will not disclose the performance of the submissions before the last group has sent us his submission, as you are not all synchronized.
+\textit{Note:} For ``Decode the image", you \textbf{have to} work with the inputs.
+
+\begin{table}[h]
+\centering
+\renewcommand{\arraystretch}{1.3} % Opens up the table a tad
+\setlength{\tabcolsep}{1em}
+\begin{tabular}{lcccccc}
+ & \multicolumn{2}{c}{Cycles} & \multicolumn{2}{c}{Nodes} & \multicolumn{2}{c}{Instructions} \\\toprule
+ & min & max & min & max & min & max \\\midrule
+Image & 778 & 1482 & 4 & 9 & 38 & 91 \\
+Coprime & 8771 & 26827 & 4 & 10 & 26 & 73 \\\bottomrule
+\end{tabular}
+\caption{Score for a given year. If you had submitted both assignments working with just 4 nodes each, you would have scored 10/10 regardless of you other metrics, since one of them (node count) was the best amongst all submissions.}\label{tab:scores}
+\end{table}
 ~\\
 
 \textbf{You will need to send us two \text{.txt} files, one for each solution.}
