[TIS-100] v1.2.1: Only computing nodes count towards the score.

--- a/Labo_TIS-100_6/elech473_tis-100_6.tex
+++ b/Labo_TIS-100_6/elech473_tis-100_6.tex
@@ -38,7 +38,7 @@
 \usepackage{rotating}
 \usepackage{fontawesome} %Symbols
 
-\newcommand{\version}{v1.2.0}
+\newcommand{\version}{v1.2.1}
 
 %cyr
 %\newcommand\textcyr[1]{{\fontencoding{OT2}\fontfamily{wncyr}\selectfont #1}}
@@ -219,7 +219,7 @@ The grade will be based on the performance of benchmarks and weighted across the
 If you performed better than the benchmark for at least one of the three performance measures, you will get a perfect grade for the exercise, that is five out of five.
 Otherwise, you will be awarded two points if the problem is solved and each of the remaining three will be linearly weighted against the benchmark bounds for each metrics (e.g. if you performed the worst in all three measures, you won't get any more point, if you are right at the average, you will get half a point each, i.e. 3.5/5). Table~\ref{tab:scores} gives you the benchmark bounds.
 
-\textit{Note:} For ``Decode the image", you \textbf{have to} work with the inputs.
+\textit{Note:} (1) For ``Decode the image", you \textbf{have to} work with the inputs. (2) Also, only \textit{Computing nodes} count toward the \textit{node count} metric, meaning you can use memory stacks without impacting this part of your score.
 
 \begin{table}[h]
 \centering
